--- a/.env.example
+++ b/.env.example
@@ -50,3 +50,10 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+NEO4J_USER=neo4j
+NEO4J_PASSWORD=neo4j
+NEO4J_BOLT_HOST=localhost:7687
+NEO4J_HTTP_HOST=localhost:7474
+NEO4J_NEO_HOST=localhost:7687
+NEO4J_DATABASE=cars
+NEO4J_TOKEN=
